--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,10 +7,10 @@ $family-sans-serif: 'Titillium Web', sans-serif;
 $timeline-icon-size: '$size-2';
 
 @import "../../node_modules/bulma/bulma.sass";
-@import '../../node_modules/bulma-switch/dist/css/bulma-switch.min.css';
-@import '../../node_modules/bulma-timeline/dist/css/bulma-timeline.min.css';
+@import '../../node_modules/bulma-switch/src/sass/index.sass';
+@import '../../node_modules/bulma-timeline/src/sass/index.sass';
 @import '../../node_modules/bulma-steps-component/bulma-steps.sass';
-@import '../../node_modules/@creativebulma/bulma-tooltip/dist/bulma-tooltip.min.css';
+@import '../../node_modules/@creativebulma/bulma-tooltip/src/sass/index.sass';
 
 
 
